[gd_scene load_steps=6 format=2]

[ext_resource path="res://game_screen/game_screen.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://game_screen/character/character.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_screen/interactive_item.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 150, 10 )

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Gui" type="Node" parent="."]

[node name="PauseContainer" type="ColorRect" parent="Gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/PauseContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="Gui/PauseContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 512.0
margin_bottom = 145.0
text = "ui_pause"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/PauseContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 512.0
margin_bottom = 169.0
alignment = 1

[node name="QuitButton" type="Button" parent="Gui/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 183.0
margin_right = 238.0
margin_bottom = 20.0
text = "ui_quit"

[node name="ContinueButton" type="Button" parent="Gui/PauseContainer/VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 328.0
margin_bottom = 20.0
text = "ui_continue"

[node name="YSort" type="YSort" parent="."]

[node name="Character1" parent="YSort" instance=ExtResource( 3 )]

[node name="Character2" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 118, 42 )

[node name="InteractiveItem" parent="YSort" instance=ExtResource( 4 )]

[node name="InteractiveItem2" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 142, 113 )
interaction_time = 10.0

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2( 128, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 24 )

[node name="Left" type="StaticBody2D" parent="."]
position = Vector2( 0, 120 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 24 )

[node name="Right" type="StaticBody2D" parent="."]
position = Vector2( 260, 120 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 24 )

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2( 128, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 0, 240 )
shape = SubResource( 24 )

[connection signal="pressed" from="Gui/PauseContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Gui/PauseContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
